--- a/styles/main.css
+++ b/styles/main.css
@@ -103,10 +103,22 @@ button {
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
-    border: 2px solid var(--color1);
     background-color: var(--color1);
     color: #eee;
     margin-inline: 10px;
+    transition: all 300ms ease-in-out;
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    -ms-transition: all 300ms ease-in-out;
+    -o-transition: all 300ms ease-in-out;
+    border: none;
+    box-shadow: 0px 5px 8px -1px #444;
+}
+
+.control:hover {
+    background-color: var(--color3);
+    color: var(--color1);
+    scale: 1.05;
 }
 
 /* Game Section Styles*/
@@ -123,6 +135,7 @@ button {
     margin-inline: auto;
     margin-block-start: 1.5rem;
     margin-block-end: 3rem;
+    box-shadow: 0px 5px 20px -1px #00000099;
     border-radius: 15px;
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
@@ -148,6 +161,26 @@ button {
     -moz-border-radius: 25px;
     -ms-border-radius: 25px;
     -o-border-radius: 25px;
+    box-shadow: 0 0 10px var(--color2);
+    transition: all 300ms cubic-bezier(0.23, 1, 0.320, 1);
+    -webkit-transition: all 300ms cubic-bezier(0.23, 1, 0.320, 1);
+    -moz-transition: all 300ms cubic-bezier(0.23, 1, 0.320, 1);
+    -ms-transition: all 300ms cubic-bezier(0.23, 1, 0.320, 1);
+    -o-transition: all 300ms cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.color-options>button:hover {
+    transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    -o-transform: translateY(-10px);
+}
+
+.color-options>button:focus {
+    border: 2px solid var(--color2);
+    outline: 2px solid var(--color1);
+    outline-offset: 5px;
 }
 
 /* Footer Styles */
