--- a/styles/main.css
+++ b/styles/main.css
@@ -275,23 +275,22 @@ footer {
     position: absolute;
     inset: 0;
     background-color: transparent;
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(35px);
     background-image: var(--congratulations);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     opacity: 0;
-    display: none;
-    transition: all 500ms ease-in-out;
-    -webkit-transition: all 500ms ease-in-out;
-    -moz-transition: all 500ms ease-in-out;
-    -ms-transition: all 500ms ease-in-out;
-    -o-transition: all 500ms ease-in-out;
+    transition: all 300ms ease-in-out;
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    -ms-transition: all 300ms ease-in-out;
+    -o-transition: all 300ms ease-in-out;
+    pointer-events: none;
 }
 
 .shown {
     opacity: 1;
-    display: block;
 }
 
 /* styles for larger mobile devices */
