--- a/styles/main.css
+++ b/styles/main.css
@@ -50,9 +50,21 @@ h3 {
     color: var(--color1);
 }
 
+h4 {
+    font-family: 'Autour One', serif;
+    letter-spacing: 2px;
+    color: red;
+    font-weight: 700;
+    margin: 1rem auto;
+    max-width: 50ch;
+}
+
+
+
 #score {
     font-family: 'Ultra', serif;
 }
+
 
 p,
 button {
@@ -112,6 +124,7 @@ button {
             letter-spacing: 1px;
         }
     }
+
 }
 
 
@@ -287,6 +300,23 @@ footer {
     -ms-transition: all 300ms ease-in-out;
     -o-transition: all 300ms ease-in-out;
     pointer-events: none;
+}
+
+
+
+
+/* Status message styles */
+.status {
+    opacity: 0;
+    padding-block: 10px;
+    font-weight: 900;
+    transition: opacity 300ms ease-in-out;
+    -webkit-transition: opacity 300ms ease-in-out;
+    -moz-transition: opacity 300ms ease-in-out;
+    -ms-transition: opacity 300ms ease-in-out;
+    -o-transition: opacity 300ms ease-in-out;
+    font-family: "Autour One", serif;
+    color: var(--color2);
 }
 
 .shown {
