--- a/styles/main.css
+++ b/styles/main.css
@@ -308,19 +308,21 @@ footer {
 /* Status message styles */
 .status {
     opacity: 0;
-    padding-block: 10px;
+    letter-spacing: 5px;
+    padding-block: 5px;
     font-weight: 900;
-    transition: opacity 300ms ease-in-out;
-    -webkit-transition: opacity 300ms ease-in-out;
-    -moz-transition: opacity 300ms ease-in-out;
-    -ms-transition: opacity 300ms ease-in-out;
-    -o-transition: opacity 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    -ms-transition: all 300ms ease-in-out;
+    -o-transition: all 300ms ease-in-out;
     font-family: "Autour One", serif;
     color: var(--color2);
 }
 
 .shown {
     opacity: 1;
+    letter-spacing: 2px;
 }
 
 /* styles for larger mobile devices */
