--- a/styles/main.css
+++ b/styles/main.css
@@ -202,8 +202,8 @@ button {
 /* Color Box Styles */
 
 .color-box {
-    height: 200px;
-    max-width: 200px;
+    height: 180px;
+    max-width: 180px;
     border: 2px solid var(--color1);
     margin-inline: auto;
     margin-block-start: 1.5rem;
@@ -323,6 +323,52 @@ footer {
 .shown {
     opacity: 1;
     letter-spacing: 2px;
+}
+
+/* Restart warning buttons style */
+
+.warning {
+    width: fit-content;
+    margin-inline: auto;
+    padding: 15px 0;
+    border-radius: 20px;
+    background-color: var(--color4);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    box-shadow: 0px 6px 10px -2px #777;
+    display: none;
+}
+
+.warning button {
+    padding: 5px 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    margin-inline: 5px;
+    border: 2px solid var(--color4);
+    background-color: red;
+    box-shadow: 1px 3px 5px 1px #444;
+    transition: all 300ms ease-in-out;
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    -ms-transition: all 300ms ease-in-out;
+    -o-transition: all 300ms ease-in-out;
+}
+
+.warning button:hover {
+    filter: drop-shadow(5px 7px 5px #00000044);
+    -webkit-filter: drop-shadow(5px 7px 10px #00000044);
+    scale: 1.02;
+}
+
+
+.warning button:last-child {
+    background-color: #3D5300;
+    border-color: var(--color4);
 }
 
 /* styles for larger mobile devices */
