--- a/styles/main.css
+++ b/styles/main.css
@@ -48,6 +48,7 @@ h3 {
     font-family: 'Ultra', serif;
     letter-spacing: 2px;
     color: var(--color1);
+    font-size: 1.2rem;
 }
 
 h4 {
@@ -57,6 +58,7 @@ h4 {
     font-weight: 700;
     margin: 1rem auto;
     max-width: 50ch;
+    font-size: 1.1rem;
 }
 
 
